{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 39,
  "lineage": "08672ceb-5f0d-a057-823a-dbb0a8091017",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkInterfaces/VM-NIC",
            "internal_domain_name_suffix": "1mh0m2hd3ieu3clsbfeigv3bce.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "VM-IPConfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/publicIPAddresses/VM-PublicIP",
                "subnet_id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet/subnets/VM-Subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "7C-1E-52-02-04-18",
            "name": "VM-NIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Terraform-RG",
            "virtual_machine_id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Compute/virtualMachines/Terraform-VM"
          },
          "dependencies": [
            "azurerm_public_ip.vm_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.vm_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkSecurityGroups/DB-NSG",
            "location": "eastus",
            "name": "DB-NSG",
            "resource_group_name": "Terraform-RG",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkSecurityGroups/VM-NSG",
            "location": "eastus",
            "name": "VM-NSG",
            "resource_group_name": "Terraform-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkSecurityGroups/VM-NSG/securityRules/Allow-HTTP",
            "name": "Allow-HTTP",
            "network_security_group_name": "VM-NSG",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "Terraform-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.vm_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkSecurityGroups/VM-NSG/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "VM-NSG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Terraform-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.vm_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/publicIPAddresses/VM-PublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.138.36",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "VM-PublicIP",
            "resource_group_name": "Terraform-RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet/subnets/DB-Subnet",
            "name": "DB-Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Terraform-RG",
            "virtual_network_name": "Terraform-VNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vm_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet/subnets/VM-Subnet",
            "name": "VM-Subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Terraform-RG",
            "virtual_network_name": "Terraform-VNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet/subnets/DB-Subnet",
            "network_security_group_id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkSecurityGroups/DB-NSG",
            "subnet_id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet/subnets/DB-Subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.db_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vm_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet/subnets/VM-Subnet",
            "network_security_group_id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkSecurityGroups/VM-NSG",
            "subnet_id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet/subnets/VM-Subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.vm_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.vm_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "70a60fdb-eae3-4e09-8972-09488357a114",
            "id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet",
            "location": "eastus",
            "name": "Terraform-VNet",
            "resource_group_name": "Terraform-RG",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet/subnets/VM-Subnet",
                "name": "VM-Subnet",
                "security_group": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkSecurityGroups/VM-NSG"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/virtualNetworks/Terraform-VNet/subnets/DB-Subnet",
                "name": "DB-Subnet",
                "security_group": "/subscriptions/57a2c3fe-d94d-4fff-aa04-2aa96318bbf7/resourceGroups/Terraform-RG/providers/Microsoft.Network/networkSecurityGroups/DB-NSG"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}